--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -17,9 +17,6 @@ gem 'bcrypt'<%= gemfile_requirement('bcrypt') %>
 
 gem 'marco-polo'
 gem 'dotenv-rails', '>= 2.0.0'
-gem 'bootstrap-sass', '~> 3.3.1'
-gem 'autoprefixer-rails'
-gem 'font-awesome-rails'
 gem 'bower-rails'
 gem 'airbrake'
 gem 'capistrano'
@@ -31,7 +28,6 @@ gem 'capistrano-db-tasks', require: false
 
 gem 'rails-i18n', '>= 4.0.0'
 gem 'haml-rails'
-gem 'simple_form'
 
 gem 'email_validator'
 
@@ -42,7 +38,6 @@ gem 'defer_draper'
 
 gem 'ransack'
 gem 'kaminari'
-gem 'bootstrap-kaminari-views'
 
 group :development, :test do
   gem 'spring'
@@ -55,15 +50,21 @@ group :development, :test do
   gem 'bullet'
   gem 'database_cleaner'
   gem 'rspec-rails', '> 3.0'
-  gem 'factory_girl_rails'
-  gem 'shoulda-matchers'
+  gem 'factory_girl_rails', '~> 4.5'
+  gem 'shoulda-matchers', require: false
   gem 'simplecov'
   gem 'simplecov-console'
-  gem 'timecop'
   gem 'rails-erd'
   gem 'awesome_print'
 
   # gem 'shoulda-callback-matchers'
   # gem 'rack-livereload'
   # gem 'annotate', ">= 2.5.0"
+
+  gem 'capybara'
+
+  # selenium-webdriver & chromedriver-helper used by
+  # JavaScript-dependent feature specs (`js: true`):
+  gem 'selenium-webdriver'
+  gem 'chromedriver-helper'
 end
