--- a/config/deploy/production.rb.tt
+++ b/config/deploy/production.rb.tt
@@ -14,6 +14,4 @@ set :rbenv_ruby,        '<%= RUBY_VERSION %>'
 
 set :deploy_to, '/home/deployer-production/<%= app_name %>'
 
-server 'example.com',
-  user: 'deployer-production',
-  roles: %w(app web db)
+server 'example.com', user: 'deployer-production', roles: %w(app web db)
