--- a/config/deploy/staging.rb.tt
+++ b/config/deploy/staging.rb.tt
@@ -14,6 +14,4 @@ set :rbenv_ruby,        '<%= RUBY_VERSION %>'
 
 set :deploy_to, '/home/deployer-staging/<%= app_name %>'
 
-server 'staging.example.com',
-  user: 'deployer',
-  roles: %w(app web db)
+server 'staging.example.com', user: 'deployer-staging', roles: %w(app web db)
