--- a/config/environments/staging.rb.tt
+++ b/config/environments/staging.rb.tt
@@ -1,4 +1,4 @@
 # Staging configuration is identical to production, with some overrides
 # for hostname, etc.
 
-require_relative "./production"
+require_relative './production'
