--- a/lib/templates/haml/scaffold/index.html.haml
+++ b/lib/templates/haml/scaffold/index.html.haml
@@ -1,6 +1,6 @@
 %h1= <%= class_name %>.model_name.human
 
-%table.table.table-striped
+%table.table
   %thead
     %tr
 <% for attribute in attributes -%>
