--- a/example.env.tt
+++ b/example.env.tt
@@ -5,7 +5,7 @@
 # The purpose of this file is to keep secrets out of source control.
 # For more information, see: https://github.com/bkeepers/dotenv
 
-DATABASE_USERNAME=<%= app_name %>
+DATABASE_USERNAME=root
 DATABASE_PASSWORD=
 SECRET_KEY_BASE=<%= SecureRandom.hex(64) %>
 ERRBIT_API_KEY=
