--- a/config/secrets.yml.tt
+++ b/config/secrets.yml.tt
@@ -1,8 +1,11 @@
 development:
   secret_key_base: <%%= ENV["SECRET_KEY_BASE"] %>
 
-test:
-  secret_key_base: <%= SecureRandom.hex(64) %>
+staging:
+  secret_key_base: <%%= ENV["SECRET_KEY_BASE"] %>
 
 production:
   secret_key_base: <%%= ENV["SECRET_KEY_BASE"] %>
+
+test:
+  secret_key_base: <%= SecureRandom.hex(64) %>
