--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -16,7 +16,7 @@ gem 'airbrake'
 gem 'capistrano'
 gem 'capistrano-rbenv'
 gem 'capistrano-bundler'
-gem 'capistrano-rails'
+gem 'capistrano-rails', '~> 1.1.3'
 gem 'capistrano-bundle_audit', require: false
 gem 'capistrano-db-tasks', require: false
 gem 'capistrano-rails-console'
