--- a/config/deploy/staging.rb.tt
+++ b/config/deploy/staging.rb.tt
@@ -12,6 +12,6 @@ set :rbenv_ruby,        '<%= RUBY_VERSION %>'
 # server list. The second argument is a, or duck-types, Hash and is
 # used to set extended properties on the server.
 
-set :deploy_to, '/home/deployer-staging/<%= app_name %>'
+set :deploy_to, '/home/deployer_staging/<%= app_name %>'
 
-server 'staging.example.com', user: 'deployer-staging', roles: %w(app web db)
+server 'staging.example.com', user: 'deployer_staging', roles: %w(app web db)
