--- a/example.env.tt
+++ b/example.env.tt
@@ -7,6 +7,6 @@
 
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=
-SECRET_KEY_BASE=<%= SecureRandom.hex(64) %>
+SECRET_KEY_BASE=
 ERRBIT_API_KEY=
 ERRBIT_HOSTNAME=
