bundle updates and rails boost to 4.2.4

--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -45,7 +45,7 @@ group :development, :test do
   gem 'database_cleaner'
   gem 'rspec-rails', '> 3.0'
   gem 'factory_girl_rails', '~> 4.5'
-  gem 'shoulda-matchers', require: false
+  gem 'shoulda-matchers', '~> 3.0'
   gem 'simplecov'
   gem 'simplecov-console'
   gem 'rails-erd'
