--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -43,7 +43,8 @@ group :development, :test do
   gem 'letter_opener'
   gem 'bullet'
   gem 'database_cleaner'
-  gem 'rspec-rails', '> 3.0'
+  gem 'coderay'
+  gem 'rspec-rails', '~> 3.4'
   gem 'factory_girl_rails', '~> 4.5'
   gem 'shoulda-matchers', '~> 3.0'
   gem 'simplecov'
