--- a/example.env.tt
+++ b/example.env.tt
@@ -8,5 +8,6 @@
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=
 SECRET_KEY_BASE=
-ERRBIT_API_KEY=
-ERRBIT_HOSTNAME=
+
+ERRBIT_PROJECT_KEY=
+ERRBIT_HOST=https://example.host.tld:8080
