--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -12,7 +12,7 @@ gem 'bcrypt'<%= gemfile_requirement('bcrypt') %>
 gem 'marco-polo'
 gem 'dotenv-rails', '>= 2.0.0'
 gem 'bower-rails'
-gem 'airbrake'
+gem 'airbrake', '~> 5.0'
 gem 'capistrano'
 gem 'capistrano-rbenv'
 gem 'capistrano-bundler'
