--- a/variants/sidekiq/config/initializers/sidekiq.rb.tt
+++ b/variants/sidekiq/config/initializers/sidekiq.rb.tt
@@ -1,3 +1,5 @@
+require 'airbrake/sidekiq/error_handler'
+
 # set namespace to rails environment (ex. 'sidekiq_<%= lower_case_app_name %>_staging'
 sidekiq_namespace = "sidekiq_<%= lower_case_app_name %>_#{Rails.env}"
 
