--- a/example.env.tt
+++ b/example.env.tt
@@ -9,5 +9,9 @@ DATABASE_USERNAME=root
 DATABASE_PASSWORD=
 SECRET_KEY_BASE=
 
+# Intercept mail on staging, to be sent to the following recipients
+# Example: "user@domain.tld,other-user@domain.tld"
+STAGING_MAIL_INTERCEPT_EMAIL_RECIPIENTS=
+
 ERRBIT_PROJECT_KEY=
 ERRBIT_HOST=https://example.host.tld:8080
