fixed email configure for staging

--- a/config/deploy.rb.tt
+++ b/config/deploy.rb.tt
@@ -20,6 +20,9 @@ set :linked_dirs, %w(
   public/uploads
 )
 
+# Generate binstubs
+set :bundle_binstubs, nil
+
 # Default value for keep_releases is 5
 set :keep_releases, 10
 
