--- a/example.env.tt
+++ b/example.env.tt
@@ -7,6 +7,7 @@
 
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=
+REDIS_URL=redis://localhost:6379/1
 SECRET_KEY_BASE=
 
 # Intercept mail on staging, to be sent to the following recipients
