--- a/example.env.tt
+++ b/example.env.tt
@@ -1,13 +1,7 @@
-# Copy this file into a new file called ".env" in the root of the project.
-# The dotenv gem will load the contents of .env into the environment when
-# Rails starts. Access values like this: ENV["SECRET_KEY_BASE"]
-#
-# The purpose of this file is to keep secrets out of source control.
-# For more information, see: https://github.com/bkeepers/dotenv
-
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=
-REDIS_URL=redis://localhost:6379/1
+REDIS_URL=redis://localhost:6379/0
+
 SECRET_KEY_BASE=
 
 # Intercept mail on staging, to be sent to the following recipients
@@ -15,4 +9,4 @@ SECRET_KEY_BASE=
 STAGING_MAIL_INTERCEPT_EMAIL_RECIPIENTS=
 
 ERRBIT_PROJECT_KEY=
-ERRBIT_HOST=https://example.host.tld:8080
+ERRBIT_URL=https://example.host.tld
