--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -1,19 +1,23 @@
 source 'https://rubygems.org'
 
 gem 'rails', '<%= Rails.version %>'
-gem 'active_model_serializers', '~> 0.10.0'
 gem 'mysql2'
 gem 'sassc-rails', '~> 1.2.1'
 gem 'mini_racer', '~> 0.1.4'
 gem 'coffee-rails'<%= gemfile_requirement('coffee-rails') %>
 gem 'jquery-rails'
-gem 'jbuilder'<%= gemfile_requirement('jbuilder') %>
 gem 'bcrypt'<%= gemfile_requirement('bcrypt') %>
+gem 'oj'
+gem 'oj_mimic_json'
 
 gem 'marco-polo'
 gem 'dotenv-rails', '>= 2.0'
 gem 'bower-rails', '~> 0.10'
-gem 'airbrake', '~> 4.1'
+gem 'airbrake', '~> 5.4'
+gem 'lograge'
+
+gem 'active_model_serializers', '~> 0.10'
+gem 'draper', '~> 3.0.0.pre1'
 
 gem 'rails-i18n', '>= 4.0'
 gem 'haml-rails', '~> 0.9'
@@ -21,9 +25,10 @@ gem 'responders', '~> 2.2.0'
 gem 'email_validator'
 gem 'recipient_interceptor'
 
-gem 'font-awesome-rails'
+gem 'font-awesome-rails', '~> 4.6'
 
 gem 'redis', '~> 3.0'
+gem 'redis-namespace', '~> 1.5.2'
 gem 'readthis', '~> 1.3'
 gem 'hiredis', '~> 0.6'
 
@@ -39,6 +44,7 @@ group :development, :test do
 
   gem 'puma', '~> 3.0'
   gem 'foreman', '~> 0.82'
+  gem 'listen', '~> 3.0.5'
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0'
   gem 'byebug'
