--- a/variants/sidekiq/config/initializers/sidekiq.rb.tt
+++ b/variants/sidekiq/config/initializers/sidekiq.rb.tt
@@ -1,14 +1,15 @@
-require 'airbrake/sidekiq/error_handler'
-
 # set namespace to rails environment (ex. 'sidekiq_<%= lower_case_app_name %>_staging'
 sidekiq_namespace = "sidekiq_<%= lower_case_app_name %>_#{Rails.env}"
 
 Sidekiq.configure_server do |config|
-  config.redis = { namespace: sidekiq_namespace }
+  config.redis = { url: ENV.fetch('REDIS_URL'), namespace: sidekiq_namespace }
+  config.error_handlers << lambda do |exception, context|
+    Airbrake.notify_or_ignore(exception, parameters: context)
+  end
 end
 
 Sidekiq.configure_client do |config|
-  config.redis = { namespace: sidekiq_namespace }
+  config.redis = { url: ENV.fetch('REDIS_URL'), namespace: sidekiq_namespace }
 end
 
 require 'sidekiq/web'
