--- a/example.env.tt
+++ b/example.env.tt
@@ -8,5 +8,5 @@ SECRET_KEY_BASE=
 # Example: "user@domain.tld,other-user@domain.tld"
 STAGING_MAIL_INTERCEPT_EMAIL_RECIPIENTS=
 
-ERRBIT_PROJECT_KEY=
+ERRBIT_PROJECT_KEY=_
 ERRBIT_URL=https://example.host.tld
