--- a/variants/sidekiq/config/initializers/sidekiq.rb.tt
+++ b/variants/sidekiq/config/initializers/sidekiq.rb.tt
@@ -4,7 +4,7 @@ sidekiq_namespace = "sidekiq_<%= lower_case_app_name %>_#{Rails.env}"
 Sidekiq.configure_server do |config|
   config.redis = { url: ENV.fetch('REDIS_URL'), namespace: sidekiq_namespace }
   config.error_handlers << lambda do |exception, context|
-    Airbrake.notify_or_ignore(exception, parameters: context)
+    Airbrake.notify(exception, parameters: context)
   end
 end
 
