--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -2,8 +2,8 @@ source 'https://rubygems.org'
 
 gem 'rails', '<%= Rails.version %>'
 gem 'mysql2'
-gem 'sassc-rails', '~> 1.2.1'
-gem 'mini_racer', '~> 0.1.4'
+gem 'sassc-rails', '>= 1.3.0'
+gem 'mini_racer', '>= 0.1.4'
 gem 'coffee-rails'<%= gemfile_requirement('coffee-rails') %>
 gem 'jquery-rails'
 gem 'bcrypt'<%= gemfile_requirement('bcrypt') %>
