--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -1,24 +1,23 @@
 source 'https://rubygems.org'
 
-git_source(:github) do |repo_name|
-  repo_name = "#{repo_name}/#{repo_name}" unless repo_name.include?("/")
-  "https://github.com/#{repo_name}.git"
-end
+git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 gem 'rails', '<%= Rails.version %>'
+# Reduces boot times through caching; required in config/boot.rb
+gem 'bootsnap', '>= 1.1.0', require: false
 gem 'mysql2'
 gem 'sassc-rails', '>= 1.3.0'
-gem 'mini_racer', '>= 0.1.4'
+gem 'mini_racer', '>= 0.1.15'
 gem 'coffee-rails'<%= gemfile_requirement('coffee-rails') %>
 gem 'bcrypt'<%= gemfile_requirement('bcrypt') %>
 gem 'jquery-rails'
 gem 'webpacker'
 gem 'sprockets', '~> 3.7.1'
 
-gem 'marco-polo'
-gem 'dotenv-rails', '>= 2.0'
+gem 'marco-polo', '>= 1.2.1'
+gem 'dotenv-rails', '>= 2.2.1'
 gem 'airbrake', '~> 5.4'
-gem 'lograge'
+gem 'lograge', '~> 0.7.1'
 
 gem 'active_model_serializers', '~> 0.10'
 gem 'rails-i18n', '~> 5.0.0'
@@ -27,29 +26,29 @@ gem 'responders', '~> 2.4.0'
 gem 'email_validator'
 gem 'recipient_interceptor'
 
-# locked untill release of 4.7.0.2
-gem 'font-awesome-rails', github: 'bokmann/font-awesome-rails', ref: '6875363'
+gem 'font-awesome-rails', '~> 4.7.0.2'
 
-gem 'redis', '~> 3.0'
-gem 'redis-namespace', '~> 1.5.2'
-gem 'readthis', '~> 1.3'
-gem 'hiredis', '~> 0.6'
+gem 'redis', '~> 4.0.1'
+gem 'redis-namespace', '~> 1.6.0'
+gem 'readthis', '~> 2.1'
+gem 'hiredis', '~> 0.6.1'
 
 group :development, :test do
   gem 'byebug'
   gem 'pry-byebug'
   gem 'letter_opener'
   gem 'bullet'
+  gem 'unique_validation_inspector'
   gem 'database_cleaner'
   gem 'coderay'
   gem 'rspec-rails', '~> 3.5'
   gem 'fuubar'
-  gem 'factory_girl_rails', '~> 4.7'
+  gem 'factory_bot_rails', '~> 4.8.2'
   gem 'shoulda-matchers', '~> 3.1'
   gem 'simplecov'
   gem 'simplecov-console'
 
-  gem 'capybara'
+  gem 'capybara', '~> 2.15'
   # selenium-webdriver & chromedriver-helper used by
   # JavaScript-dependent feature specs (`js: true`):
   gem 'selenium-webdriver'
@@ -57,26 +56,23 @@ group :development, :test do
 end
 
 group :development do
-  gem 'capistrano', '3.5.0'
-  gem 'capistrano-rbenv', '~> 2.0.4'
-  gem 'capistrano-bundler', '~> 1.1.4'
-  gem 'capistrano-rails', '~> 1.1.7'
-  gem 'capistrano-bundle_audit', require: false
-  gem 'capistrano-db-tasks', require: false
-  gem 'capistrano-rails-console', '~> 1.0.2'
-  gem 'airbrussh', '~> 1.0.2', require: false
+  gem 'capistrano', '3.10.1'
+  gem 'capistrano-rbenv', '~> 2.1.3'
+  gem 'capistrano-bundler', '~> 1.3.0'
+  gem 'capistrano-rails', '~> 1.3.1'
+  gem 'capistrano-bundle_audit', '~> 0.2.1', require: false
+  gem 'capistrano-db-tasks', '~> 0.6', require: false
+  gem 'capistrano-rails-console', '~> 2.2.1'
+  gem 'airbrussh', '~> 1.3.0', require: false
 
   gem 'puma'<%= gemfile_requirement('puma') %>
-  gem 'foreman', '~> 0.82'
-  gem 'listen', '~> 3.0.5'
-  gem 'better_errors'
-  gem 'binding_of_caller'
-  gem 'rails-erd'
-  gem 'awesome_print'
-  gem 'brakeman', require: false
-
-  gem 'spring'
-  gem 'spring-watcher-listen', '~> 2.0.0'
+  gem 'foreman', '~> 0.84'
+  gem 'listen', '~> 3.1.5'
+  gem 'better_errors', '~> 2.4.0'
+  gem 'binding_of_caller', '~> 0.7.3'
+  gem 'rails-erd', '~> 1.5.2'
+  gem 'awesome_print', '1.8.0'
+  gem 'brakeman', '~> 4.1.1', require: false
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
