--- a/variants/sidekiq/config/initializers/sidekiq.rb.tt
+++ b/variants/sidekiq/config/initializers/sidekiq.rb.tt
@@ -13,6 +13,7 @@ Sidekiq.configure_client do |config|
 end
 
 require 'sidekiq/web'
+require 'sidekiq-statistic'
 Sidekiq::Web.app_url = '/'
 Sidekiq::Web.use(Rack::Auth::Basic, 'Application') do |username, password|
   username == ENV.fetch('SIDEKIQ_WEB_USERNAME') &&
