--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -69,10 +69,11 @@ group :development do
   gem 'foreman', '~> 0.84'
   gem 'listen', '~> 3.1.5'
   gem 'better_errors', '~> 2.4.0'
-  gem 'binding_of_caller', '~> 0.7.3'
+  gem 'binding_of_caller', '~> 0.8.0'
   gem 'rails-erd', '~> 1.5.2'
   gem 'awesome_print', '1.8.0'
   gem 'brakeman', '~> 4.1.1', require: false
+  gem 'rubocop', require: false
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
