--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -4,7 +4,7 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 gem 'rails', '<%= Rails.version %>'
 # Reduces boot times through caching; required in config/boot.rb
-gem 'bootsnap', '>= 1.1.0', require: false
+gem 'bootsnap', '>= 1.2.0', require: false
 gem 'mysql2'
 gem 'sassc-rails', '>= 1.3.0'
 gem 'coffee-rails'<%= gemfile_requirement('coffee-rails') %>
@@ -16,11 +16,11 @@ gem 'sprockets', '~> 3.7.1'
 gem 'marco-polo', '>= 1.2.1'
 gem 'dotenv-rails', '>= 2.2.1'
 gem 'airbrake', '~> 5.4'
-gem 'lograge', '~> 0.7.1'
+gem 'lograge', '~> 0.10.0'
 
 gem 'active_decorator'
 gem 'active_model_serializers', '~> 0.10'
-gem 'rails-i18n', '~> 5.0.0'
+gem 'rails-i18n', '~> 5.1.0'
 gem 'haml-rails', '~> 1.0'
 gem 'responders', '~> 2.4.0'
 gem 'email_validator'
@@ -30,7 +30,7 @@ gem 'font-awesome-rails', '~> 4.7.0.2'
 
 gem 'redis', '~> 4.0.1'
 gem 'redis-namespace', '~> 1.6.0'
-gem 'readthis', '~> 2.1'
+gem 'readthis', '~> 2.2'
 gem 'hiredis', '~> 0.6.1'
 
 group :development, :test do
@@ -43,7 +43,7 @@ group :development, :test do
   gem 'coderay'
   gem 'rspec-rails', '~> 3.5'
   gem 'fuubar'
-  gem 'factory_bot_rails', '~> 4.8.2'
+  gem 'factory_bot_rails', '~> 4.10.0'
   gem 'shoulda-matchers', '~> 3.1'
   gem 'simplecov'
   gem 'simplecov-console'
@@ -56,13 +56,13 @@ group :development, :test do
 end
 
 group :development do
-  gem 'capistrano', '3.10.1'
+  gem 'capistrano', '~> 3.11'
   gem 'capistrano-rbenv', '~> 2.1.3'
   gem 'capistrano-bundler', '~> 1.3.0'
-  gem 'capistrano-rails', '~> 1.3.1'
+  gem 'capistrano-rails', '~> 1.4.0'
   gem 'capistrano-bundle_audit', '~> 0.2.1', require: false
   gem 'capistrano-db-tasks', '~> 0.6', require: false
-  gem 'capistrano-rails-console', '~> 2.2.1'
+  gem 'capistrano-rails-console', '~> 2.3.0'
   gem 'airbrussh', '~> 1.3.0', require: false
 
   gem 'puma'<%= gemfile_requirement('puma') %>
@@ -72,7 +72,7 @@ group :development do
   gem 'binding_of_caller', '~> 0.8.0'
   gem 'rails-erd', '~> 1.5.2'
   gem 'awesome_print', '1.8.0'
-  gem 'brakeman', '~> 4.1.1', require: false
+  gem 'brakeman', '~> 4.3.1', require: false
   gem 'rubocop', require: false
 end
 
