--- a/app/views/layouts/application.html.haml.tt
+++ b/app/views/layouts/application.html.haml.tt
@@ -9,6 +9,7 @@
     = action_cable_meta_tag
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
+    = javascript_pack_tag    'application'
     = csrf_meta_tags
   %body{class: "#{controller.controller_name}"}
     - flash.each do |type, msg|
